# hg2-item-website

./: .pre-commit-config.yaml  README.md
backend/: .coverage  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aa481876f47b_change_item_id_to_item_ingame_id.py  eb355ea8cd3a_initial_migration.py
backend/app/: crud.py  initial_data.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py  test_users.py
backend/app/tests/utils/: item.py  user.py  utils.py
frontend/static/: index.html  script.js  styles.css
