[project]
name = "app"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg<0.31.0,>=0.30.0",
    "fastapi[standard]>=0.115.6,<0.116",
    "hg2-item-parser>=0.7.1",
    "pydantic-settings<3.0.0,>=2.6.1",
    "sqlalchemy<3.0.0,>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage<8.0.0,>=7.6.9",
    "httpx<0.29.0,>=0.28.0",
    "mypy>=1.12.0,<2.0.0",
    "pre-commit>=4.0.1,<5.0.0",
    # Latest versions have event loop issues
    "pytest-asyncio==0.21.2",
    # Pin for compatibility with pytest-asyncio
    "pytest==8.3.4",
    "ruff>=0.6.9,<1.0.0",
    "types-passlib>=1.7.7.20240819,<2.0.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "TRY", # tryceratops
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM", # flake8-errmsg
    "FA", # flake8-future-annotations
    "PT", # flake8-pytest-style
    "T20", # flake8-print
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA001", # commented-out-code
    "RUF001", # ambiguous-unicode-character-string
    "RUF003", # ambiguous-unicode-character-comment
]
ignore = [
    "ANN204", # missing-return-type-special-method (dunder methods)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
